--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Hello world</h1>
+    <ol>
+        <li>ordered</li>
+        <li>ordered</li>
+        <li>ordered</li>
+    </ol>
 </body>
 </html>
