1week1commit_좀 해결해보자

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <ol>
-        <li>ordered</li>
-        <li>ordered</li>
-        <li>ordered</li>
-    </ol>
+   <h1>이번엔 성공?!?!?!?</h1>
+  <h2>하는 줄 알았더니,,,</h2>
 </body>
 </html>
